--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -1,4 +1,4 @@
-name: Publish Package to npmjs
+name: Publish Package to Npmjs
 
 on:
   push:
@@ -19,10 +19,11 @@ jobs:
         env:
           NODE_OPTIONS: '--max_old_space_size=4096' # node分配区？
 
-      - name: Install and Build and Publish to npmjs # 安装依赖、build打包
+      - name: Install and Build and Publish to Npmjs # 安装依赖、build打包
         run: |
           npm i -g pnpm
           pnpm run init
-          npm run pub
+          pnpm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_AUTH_TOKEN }}
+          pnpm run pub
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
